--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.box {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  
+
+}
+
+.inputbox{
+  /* display: inline; */
+  height: 30px;
+  width: 20px;
+  margin: 15px;
+  border: 5px solid black;
+  background-color: aqua;
+} 
+.App input{
+  margin: 20px;
+  margin-left: 40px;
+  border: 3px solid black;
+  height: 30px;
+  width: 150px;
+}
+label{
+  margin: 40px;
+  margin-left: 40px;
+  margin-top: 60px;
+}
+/* button{
+  margin-left: 200px;
+  height: 30px;
+  
+  width: 50px;
+  background-color: aqua;
+} */
+.App .create{
+  background-color: skyblue;
+  margin-left: 200px;
+  margin-right: 100px;
+  height: 30px;
+  
+  width: 100px;
+  border-radius: 5px;
+}
+.App .evolute{
+  height: 30px;
+  
+  width: 100px;
+  border-radius: 5px;
+  background-color: blue;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
